# toncourses_api

./: README.md  alembic.ini  pyproject.toml
app/: main.py
app/core/db/: __init__.py
app/models/: __init__.py  base.py  course.py  mixins.py  user.py  user_course_association.py
core/: config.py
core/db/: session.py
migrations/: env.py
migrations/versions/: 2024_04_27_1725-cea3eb499a89_initial_models.py  2024_04_27_1728-fb260b27093e_create_courses_and_user_course_assoc_.py
